# rooms

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  clippy.toml
.cargo/: mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-debug.yml  claude.yml  coverage.yml  mutants.yml
docs/: README.md  follow-ups.md  preflight.md  product-directions.md  rooms-host-runbook.md  runner-contract.md  vision.md
docs/experiments/: multi-agent-rooms-2026-07-09.md
docs/experiments/tasks/: ship-room-alpha.md  ship-room-beta.md
docs/features/01-productionization/: driver-hardening.md  driver-readonly-rootfs.md  driver.md
docs/features/02-operational-layer/: plan.md
docs/features/03-custody-plane/: driver.md
docs/features/agent-rootfs-alpine-kernel/: spec.md
docs/features/ci-and-claude-workflow/: spec.md
docs/features/cursor-sdk-runner/: spec.md
docs/features/docs-vision-and-readme/: spec.md
docs/features/egress-control-test-harness/: spec.md
docs/features/firecracker-under-jailer/: spec.md
docs/features/going-public/: driver.md  gp-ci-cargo-audit.md  gp-ci-coverage-workflow.md  (+17 more)
examples/: drive-anthropic.sh
images/: .gitignore
proptest-regressions/: slot.txt
scripts/: README.md  bake-rootfs-ssh.sh  build-rootfs-alpine.sh  build-rootfs.sh  checksums.txt  e2e.sh  provision-hyperv-auto.ps1  provision-hyperv.ps1  setup-rooms-host.sh  setup-tap.sh  teardown-tap.sh  test-bake-rootfs-ssh-user.sh  test-checksum-verify.sh  test-cursor-runner.sh  test-rootfs-alpine.sh  test-rootfs.sh  test-tap-rules.sh
scripts/claude-code/: package-lock.json  package.json
scripts/lib/: overlay-init.sh  rooms-secrets-fetch.sh  rootfs-helpers.sh
scripts/rootfs/: install-cursor.sh  package-lock.json
src/: artifacts.rs  config.rs  doctor.rs  egress.rs  egress_audit.rs  error.rs  firecracker.rs  isolation.rs  lib.rs  lifecycle.rs  main.rs  preflight.rs  registry.rs  room.rs  rootfs.rs  runner.rs  slot.rs  transport.rs  vsock.rs  witness.rs
tests/: cli.rs  control_failures.rs  cursor_runner_e2e.rs  egress_control_e2e.rs  egress_e2e.rs  lifecycle_e2e.rs  pool_e2e.rs  preflight_binary.rs  run_command_e2e.rs  secrets_e2e.rs  witness_e2e.rs
tests/fixtures/: firecracker_exit2.sh  firecracker_no_socket.sh
(+41 files in other folders)
