[package]
name = "rooms"
version = "0.1.0"
edition = "2021"
description = "Disposable Firecracker microVMs with specified deps — substrate for agent rooms"
license = "MIT"
authors = ["Michael Habib <michael.habib@hadrian.co>"]
repository = "https://github.com/itsHabib/rooms"
keywords = ["firecracker", "microvm", "agent", "sandbox"]
categories = ["command-line-utilities", "virtualization"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "net", "signal", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
ulid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[features]
# End-to-end tests that require a real Firecracker binary + /dev/kvm + the
# quickstart kernel/rootfs at conventional paths. Off by default so `make
# check` stays portable; flip on with `cargo test --features e2e` inside the
# rooms-host VM.
e2e = []

[lints.rust]
# Cheney-flavored Rust: forbid unsafe, refuse stale qualifications and
# unreachable visibility. Matches pers/dossier; (missing_docs deferred until
# the public API stabilizes past v0).
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
non_ascii_idents = "warn"

[lints.clippy]
# Default groups: warn-everything, opt out individually below.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Selective restriction lints — the rest of restriction is too prescriptive.
# Cheney: don't panic, don't ignore errors, don't index-and-pray.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
indexing_slicing = "warn"
dbg_macro = "warn"
print_stdout = "warn"
str_to_string = "warn"
get_unwrap = "warn"

# Opt-outs from pedantic/nursery that fight idiom or aren't worth the noise.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
